<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MicroMood</string>
    <string name="no_moods" tools:keep="@string/no_moods">No moods available</string>
    <string name="contact_us">Shoot me an e-mail!</string>
    <string name="visit_website">My GitHub Profile</string>
    <string name="query" tools:keep="@string/query">Mini Moods Query</string>
    <string name="contribute">Contribute on GitHub</string>
    <string name="notes_hint">Notes (optional)</string>
    <!-- Mood descriptions -->
    <string name="mood_1">Very happy</string>
    <string name="mood_2">Happy</string>
    <string name="mood_3">Neutral</string>
    <string name="mood_4">Sad</string>
    <string name="mood_5">Very sad</string>

    <!-- Widget strings -->
    <string name="add_note">Tap to add note</string>
    <string name="notes">Notes</string>
    <string name="open_notes">Open notes</string>
    <string name="note_saved">Note: %s</string>
    <string name="set_reminder">Set daily reminder</string>
    <string name="save_notes">Save notes</string>
    <string name="very_happy">Very happy</string>
    <string name="neutral">Neutral</string>
    <string name="very_sad">Very sad</string>
    <string name="sad">Sad</string>
    <string name="happy">Happy</string>
    
    <!-- Weekly Summary Card -->
    <string name="weekly_summary_title">Weekly Summary</string>
    <string name="streak_label">Daily Streak</string>
    <string name="this_week_label">This Week</string>
    <string name="streak_days">%d days</string>
    <string name="streak_day">1 day</string>
    <string name="mood_great">days feeling terrible</string>
    <string name="mood_good">days feeling </string>
    <string name="mood_okay">days feeling okay</string>
    <string name="mood_bad">days feeling bad</string>
    <string name="mood_terrible">days feeling terrible</string>
    <string name="empty_week">No moods recorded this week</string>
    <string name="weekly_insight_placeholder">Check in daily to see your weekly insights!</string>
    <string name="export">Export CSV</string>
    <string name="import_csv">Import CSV</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_crash_reports">Send crash reports</string>
    <string name="crash_report_prompt">MicroMood relies on information from any issues you experience to improve the app. Do you want to help by sending anonymous crash statistics?</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system" translatable="false">system</string>
    <string name="version" translatable="false">%s (%d)</string>
    <string name="key_should_log_crashes" translatable="false">key_should_log_crashes</string>
    <string name="key_theme" translatable="false">key_theme</string>
    <string-array name="theme_entries">
        <item>@string/system_default</item>
        <item>@string/light</item>
        <item>@string/dark</item>
    </string-array>
    <string-array name="theme_values">
        <item>@string/system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
</resources>
